<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mayan Doomsday Widget</string>
    <string name="mayan_doomsday_widget_4x2">Mayan Doomsday 4x2</string>
    <string name="mayan_doomsday_widget_4x2party">Mayan Doomsday 4x2 EoW party</string>
    <string name="mayan_doomsday_widget_4x2seconds">Mayan Doomsday 4x2 with seconds</string>
    <string name="before">BEFORE DOOMSDAY</string>
    <string name="before_party">End of the World</string>
    <string name="after">AFTER DOOMSDAY</string>
    <string name="after_party">After End of the World</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>

</resources>